--- a/index.html
+++ b/index.html
@@ -189,6 +189,26 @@
 				</p>
 			</div>
 			<div class="answer">
+				<p class="text">
+					Tomando la explicación anterior, simplemente podríamos restarle uno al tamaño del grupo de estudiantes, <b>b</b>
+				</p>
+				<p class="expression">
+					<span class="expression--vertical">
+						<span>n - 1</span>
+						<span>k</span>
+					</span>
+				</p>
+				<p class="text">
+					Y para hacer la cantidad de grupos como tal, simplemente vamos a restar tanto al número de personas por grupo, 
+					ya que María ya hace parte del grupo, y otra vez al tamaño del grupo de estudiantes porqué María ya esta en el grupo 
+					y no se puede reelegir a María.
+				</p>
+				<p class="expression">
+					<span class="expression--vertical">
+						<span>n - 1</span>
+						<span>k - 1</span>
+					</span>
+				</p>
 			</div>
 		</article>
 		<article>
@@ -202,6 +222,38 @@
 				</p>
 			</div>
 			<div class="answer">
+				<p class="text">
+					<sub>ok?<sub>
+				</p>
+				<p class="expression">
+					<span class="expression">
+						<span class="expression--vertical">
+							<span>n - 1</span>
+							<span>k</span>
+						</span>
+					</span>
+					+
+					<span class="expression">
+						<span class="expression--vertical">
+							<span>n - 1</span>
+							<span>k - 1</span>
+						</span>
+					</span>
+					=
+					<span class="expression">
+						<span class="expression--vertical">
+							<span>n</span>
+							<span>k</span>
+						</span>
+					</span>
+				</p>
+				<p class="text">
+					Pero bueno ¿ahí por qué pasa eso? Supongo que se puede intentar darle valores a <b>n</b> y <b>k</b> y probar hasta que le dé. 
+					¿Pero cual es la demostración matemática?
+				</p>
+				<p class="text">
+					<b>Si nos van a dan una buena comida como mínimo que nos den la receta, no?</b>
+				</p>
 			</div>
 		</article>
 		<article>
