Added last point and text. Juan if you are seeing this, hehehe

--- a/index.html
+++ b/index.html
@@ -367,7 +367,29 @@
 				</p>
 			</div>
 			<div class="answer">
+				<p class="text">
+					<b>El triángulo de Pascal</b> es la secuencia de las combinaciones de un doble iterador, 
+					iteradores que se usan como valores de unas combinaciones.
+					Estos iteradores inician en 0 ambos. El primero <b>i</b> incrementa hasta el <b>Infínito &infin;<sup>+</sup></b>. 
+					Y el segundo <b>j</b> incrementa hasta ser igual al primer iterador.
+					Se usa en la combinación <b>i</b> cómo el número de elementos en un grupo y <b>j</b> como la cantidad de elementos por grupo. 
+				</p>
+				<p class="text">
+					En cada iteración de <b>i</b> se va realizando las combinaciones desde 0, el inicializador de <b>j</b>, incrementando <b>j</b> hasta que esta llegue a 
+					ser igual a <b>i</b>. La secuencia que se forma de los resultados de las combinaciones terminan siendo los mismos coeficientes de potenciar un binomio a 
+					una potencia, siendo esta potencia el valor de <b>i</b>.
+				</p>
 			</div>
+		</article>
+		<article>
+			<p class="text" style="text-align: center;">
+				Hemos hecho una calculadora donde se ingresa los valores de un binomio, valores de cada uno de sus terminos y el exponente del binomio como tal, 
+				y calcula el Binomio. Se va a ir actualizando un 'preview' del binomio según se vaya ingresando los valores. <br>
+				(Se tiene (x + y)<sup>2</sup> por defecto pero sin ningún valor ingresado se tomara solo como (x + y))
+			</p>
+			<p class="text" style="text-align: center;">
+				<b>Solo necesita el exponente del Binomio, por defecto 1, y darle click al botón de 'Calcular'</b>
+			</p>
 		</article>
 		<section>
 			<h2>Calculadora de Triangulo de Pascal</h2>
